export const SERVICE_ROLES = ["chanteur", "musicien", "presidence", "regie"] as const;
export type ServiceRole = (typeof SERVICE_ROLES)[number];

// Rôles « exécutants » : donnent le droit de créer/éditer des setlists du service
// où l'on sert. La régie en est exclue (accès en lecture seule aux cultes).
export const PERFORMER_ROLES: ServiceRole[] = ["chanteur", "musicien", "presidence"];

export const SERVICE_ROLE_LABELS: Record<ServiceRole, string> = {
  chanteur: "Choriste",
  musicien: "Musicien",
  presidence: "Présidence",
  regie: "Régie",
};

// Niveau d'accès à une catégorie de setlist, dérivé des rôles (cf. src/lib/access.ts).
export type AccessLevel = "view" | "create" | "edit";

export const SERVICE_LIEUX = [
  "Culte Francophone",
  "Intergroupe",
  "Interfranco",
  "Campus",
] as const;
export type ServiceLieu = (typeof SERVICE_LIEUX)[number];

export const EDD_ROLES = ["musicien", "presidence"] as const;
export type EddRole = (typeof EDD_ROLES)[number];

export const GROUPES = ["Groupe Paix", "Groupe Fidélité", "Groupe Bonté"] as const;
export type Groupe = (typeof GROUPES)[number];

// Pôles, attribués par un admin. « événement » donne aussi la coordination des
// programmes de scène (lot 3 bis, isCoordination) ; DA, Média et Orga servent
// aux tâches par pôle (lot 7). Louange n'est pas coché : il découle des rôles de
// service (polesDe dans src/lib/access.ts, isTachePole dans firestore.rules).
export const POLES = ["da", "media", "orga", "evenement"] as const;
export type Pole = (typeof POLES)[number];
export const POLE_LABELS: Record<Pole, string> = { da: "DA", media: "Média", orga: "Orga", evenement: "Événement" };

export interface UserProfile {
  uid: string;
  email: string;
  firstName: string;
  lastName: string;
  /** Nom tel qu'il apparaît dans les plannings (ex. "David C.") — vide si pas encore dans les plannings */
  planningName: string;
  /** Rôles de service par catégorie de setlist (Culte Francophone, Campus, Groupe Paix,
   *  中班…). La présence d'une clé = la personne sert dans cette catégorie ; le tableau
   *  précise ses rôles (présidence / choriste / musicien / régie). Source unique des
   *  permissions — le niveau view/create/edit en est dérivé (cf. src/lib/access.ts). */
  serviceRoles: Record<string, ServiceRole[]>;
  /** Sections pour lesquelles la personne crée des évènements et des infos du
   *  calendrier (ancien droit de publier des annonces, lot 6) — attribué par les
   *  admins uniquement. Cf. canCreateEvenement (src/lib/access.ts). */
  annonces: string[];
  /** Audiences vers lesquelles la personne peut envoyer une notification manuelle
   *  (catégories culte/groupe/EDD, ou "*" pour tout le monde) — attribué par les
   *  admins uniquement. Cf. src/lib/push/audiences.ts. */
  notify: string[];
  /** Droit de tenir l'organigramme (lot 16) : ajouter, retirer et déplacer
   *  n'importe qui dans n'importe quelle équipe — attribué par les admins
   *  uniquement. Cf. canEditerEquipes (src/lib/access.ts). */
  equipes?: boolean;
  /** Pôles de coordination (« evenement » : programmes de scène) — attribués par
   *  les admins uniquement. Absent = aucun. */
  poles?: Pole[];
  /** Plannings que la personne peut remplir dans l'app (clés de
   *  PUBLISHABLE_PLANNINGS, ex. « culte ») — attribué par les admins uniquement,
   *  planning par planning (lot 17). Absent = aucun.
   *  Cf. canEditPlanning (src/lib/access.ts). */
  plannings?: string[];
  /** Date d'inscription = createTime du document Firestore users/{uid}, en lecture
   *  seule (jamais persisté comme champ). Renseigné pour tous les profils existants. */
  createdAt?: Date;
}

// ─── Préférences de notification push (par type) ─────────────────────────────
// Stockées dans un doc auto-géré notifPrefs/{uid} (le profil est verrouillé en
// édition). Le serveur filtre les envois automatiques selon ces préférences ;
// absence de doc/champ = activé. Les envois manuels (notifier/broadcast) ne sont
// PAS filtrés. Cf. src/lib/firebase/notifPrefs.ts + src/lib/push/recipients.ts.
// « annonces » retiré le 19/09/2026 : les annonces sont fondues dans les
// évènements depuis le lot 6, plus aucun expéditeur ne consultait cette
// préférence ; un champ `annonces` encore présent dans notifPrefs/{uid} est
// simplement ignoré à la lecture.
export const NOTIF_TYPES = ["reminders", "setlists", "evenements", "taches"] as const;
export type NotifType = (typeof NOTIF_TYPES)[number];
export type NotifPrefs = Record<NotifType, boolean>;

export const DEFAULT_NOTIF_PREFS: NotifPrefs = {
  reminders: true,
  setlists: true,
  evenements: true,
  taches: true,
};

/** Langue des envois automatiques (rappels), mémorisée dans notifPrefs/{uid}.lang
 *  par la navbar à la connexion et à chaque changement ; absente = français. */
export type NotifLang = "fr" | "zh-CN";

export const NOTIF_TYPE_LABELS: Record<NotifType, string> = {
  reminders: "Rappels de service",
  setlists: "Setlist prête",
  evenements: "Évènements",
  taches: "Tâches",
};
